--- a/src/app/main/pages/admin/subscriptions/edit/subscription-edit.component.html
+++ b/src/app/main/pages/admin/subscriptions/edit/subscription-edit.component.html
@@ -1,65 +1,109 @@
-  <ng-container [ngSwitch]="true">
-    <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
-      <app-page title="Edit subscription">
-        <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}">
-        </ng-container>
-      </app-page>
-    </ng-template>
-
-    <ng-template [ngSwitchCase]="this.displayMode == 'Component'">
-      <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}"></ng-container>
-    </ng-template>
-
-    <ng-template [ngSwitchCase]="this.dialogConfig != null">
-      <h2 mat-dialog-title>Edit subscription</h2>
-
-      <mat-dialog-content>
-        <ng-container [ngTemplateOutlet]="htmlContent"
-          [ngTemplateOutletContext]="{$implicit: this.dialogConfig.host.form}"></ng-container>
-      </mat-dialog-content>
-
-      <mat-dialog-actions fxLayoutAlign="stretch stretch">
-        <section fxFlex fxLayoutAlign="space-between stretch">
-          <section class="flex">
-            <button mat-button (click)="this.cancel()" cdkFocusInitial>Cancel</button>
-            <button mat-button (click)="this.save()" [disabled]="!this.dialogConfig.host.form.valid">Ok</button>
-          </section>
-        </section>
-      </mat-dialog-actions>
-    </ng-template>
-  </ng-container>
-
-
-
-  <ng-template #htmlContent let-targetForm>
-    <section [formGroup]="targetForm" fxFlex fxFlexFill>
-      <section class="mb-8">
-        <mat-form-field appearance="fill" class="w-full">
-          <mat-label>Name</mat-label>
-          <input matInput placeholder="Placeholder" formControlName="name">
-          <mat-icon matSuffix>check</mat-icon>
-          <mat-hint>Subscription name will appear as part of the subscription title</mat-hint>
-        </mat-form-field>
-      </section>
-
-      <section class="mb-8">
-        <mat-form-field appearance="fill" class="w-full">
-          <mat-label>Price</mat-label>
-          <input matInput placeholder="Placeholder" formControlName="price">
-          <mat-icon matSuffix>attach_money</mat-icon>
-          <mat-slider min="1" max="15" step="0.10" formControlName="price"></mat-slider>
-          <mat-hint>Hint</mat-hint>
-        </mat-form-field>
-      </section>
-
-      <section class="mb-8">
-        <mat-form-field appearance="fill" class="w-full">
-          <mat-label>Fill form field</mat-label>
-          <input matInput placeholder="Placeholder">
-          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-          <mat-hint>Hint</mat-hint>
-        </mat-form-field>
-      </section>
-
-    </section>
+<ng-container [ngSwitch]="true">
+  <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
+    <app-page title="Edit subscription">
+      <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}">
+      </ng-container>
+    </app-page>
   </ng-template>
+
+  <ng-template [ngSwitchCase]="this.displayMode == 'Component'">
+    <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}"></ng-container>
+  </ng-template>
+
+  <ng-template [ngSwitchCase]="this.dialogConfig != null">
+    <h2 mat-dialog-title>Edit subscription</h2>
+
+    <mat-dialog-content>
+      <section class="p-2">
+        <mat-accordion class="example-headers-align">
+          <mat-expansion-panel [expanded]="this.dialogConfig.host.dialogEditStep === 0"
+            (opened)="this.dialogConfig.host.setDialogEditStep(0)" hideToggle>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Form
+              </mat-panel-title>
+              <mat-panel-description class="flex-grow-0">
+                <mat-icon>edit</mat-icon>
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+
+            <ng-container [ngTemplateOutlet]="htmlContent"
+              [ngTemplateOutletContext]="{$implicit: this.dialogConfig.host.form}"></ng-container>
+
+          </mat-expansion-panel>
+
+          <mat-expansion-panel class="custom-expansion-panel delete-confirmation" [expanded]="this.dialogConfig.host.dialogEditStep === 2"
+            (opened)="this.dialogConfig.host.setDialogEditStep(2)" hideToggle>
+            <mat-expansion-panel-header class="bg-red-600 hover:bg-red-700">
+              <mat-panel-title class="text-gray-100">
+                Delete {{this.dialogConfig.host.form.get('name').value}}
+              </mat-panel-title>
+              <mat-panel-description class="flex-grow-0">
+                <mat-icon class="text-gray-100">delete</mat-icon>
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+
+              <section class="m-8" [formGroup]="this.dialogConfig.host.form">
+                <mat-checkbox class="example-margin" formControlName="markToDelete">Checked this if you want to delete this
+                  subscription</mat-checkbox>
+              </section>
+          </mat-expansion-panel>
+
+        </mat-accordion>
+      </section>
+    </mat-dialog-content>
+
+    <mat-dialog-actions fxLayoutAlign="stretch stretch">
+      <section fxFlex fxLayoutAlign="space-between stretch">
+        <section class="flex">
+          <button mat-button (click)="this.cancel()" cdkFocusInitial>Cancel</button>
+          <button mat-button (click)="this.save()" [disabled]="!this.dialogConfig.host.form.valid">Ok</button>
+        </section>
+      </section>
+    </mat-dialog-actions>
+  </ng-template>
+</ng-container>
+
+
+
+<ng-template #htmlContent let-targetForm>
+  <section [formGroup]="targetForm" fxFlex fxFlexFill>
+    <section class="mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Placeholder" formControlName="name">
+        <mat-icon matSuffix>check</mat-icon>
+        <mat-hint>Subscription name will appear as part of the subscription title</mat-hint>
+      </mat-form-field>
+    </section>
+
+    <section class="mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Price</mat-label>
+        <input matInput placeholder="Placeholder" formControlName="price">
+        <mat-icon matSuffix>attach_money</mat-icon>
+        <mat-slider min="1" max="15" step="0.10" formControlName="price"></mat-slider>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field>
+    </section>
+
+    <section class="mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Fill form field</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field>
+    </section>
+
+    <section class="mt-8 mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Fill form field</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field>
+    </section>
+
+  </section>
+</ng-template>
