--- a/src/app/main/pages/admin/subscriptions/edit/subscription-edit.component.html
+++ b/src/app/main/pages/admin/subscriptions/edit/subscription-edit.component.html
@@ -11,7 +11,11 @@
     </ng-template>
 
     <ng-template [ngSwitchCase]="this.dialogConfig != null">
-      <h2 mat-dialog-title>Edit subscription</h2>
+      <h2 mat-dialog-title
+      cdkDrag
+      cdkDragRootElement=".cdk-overlay-pane"
+      cdkDragHandle
+      >Edit subscription</h2>
 
       <mat-dialog-content>
         <ng-container [ngTemplateOutlet]="htmlContent"
@@ -47,7 +51,7 @@
           <mat-label>Price</mat-label>
           <input matInput placeholder="Placeholder" formControlName="price">
           <mat-icon matSuffix>attach_money</mat-icon>
-          <mat-slider min="1" max="15" step="0.10" formControlName="price"></mat-slider>
+          <mat-slider min="1" max="15" step="0.10" [(ngModel)]="this.priceModel" [ngModelOptions]="{standalone: true}"></mat-slider>
           <mat-hint>Hint</mat-hint>
         </mat-form-field>
       </section>
