--- a/src/app/main/pages/admin/subscriptions/new/subscription-new.component.html
+++ b/src/app/main/pages/admin/subscriptions/new/subscription-new.component.html
@@ -47,7 +47,7 @@
         <mat-label>Price</mat-label>
         <input matInput placeholder="Placeholder" formControlName="price">
         <mat-icon matSuffix>attach_money</mat-icon>
-        <mat-slider min="1" max="15" step="0.10" formControlName="price"></mat-slider>
+        <mat-slider min="1" max="15" step="0.10" [(ngModel)]="this.priceModel" [ngModelOptions]="{standalone: true}"></mat-slider>
         <mat-hint>Hint</mat-hint>
       </mat-form-field>
     </section>
