--- a/src/app/main/dynamic-modules/axie-infinity/axie-infinity-main/axie-infinity-main.component.html
+++ b/src/app/main/dynamic-modules/axie-infinity/axie-infinity-main/axie-infinity-main.component.html
@@ -1,4 +1,4 @@
-<app-page title="Axie Infinity">
+<app-page  navigationItem="ADMIN_SUBSCRIPTIONS">
   <ng-template #optionsContent>
 
     <button mat-mini-fab aria-label="Axies">
