--- a/src/app/main/pages/admin/system-product/list/system-product-list.component.html
+++ b/src/app/main/pages/admin/system-product/list/system-product-list.component.html
@@ -1,4 +1,4 @@
-<app-page title="New payment method" *ngIf="this.displayMode == 'Page'; else componentView">
+<app-page pageTitle="New payment method" *ngIf="this.displayMode == 'Page'; else componentView">
 
   <ng-container [ngTemplateOutlet]="content"></ng-container>
 
