--- a/src/app/main/pages/dashboard/dashboard.component.html
+++ b/src/app/main/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-page title="Dashboard">
+<app-page navigationItem="DASHBOARD">
 
   <section fxLayout="row wrap" fxLayoutGap="20px">
     <mat-card class="dashboard-tile" fxFlex *ngFor="let i of [1,2,3,4]">
