--- a/src/app/main/pages/product-category/list/product-category-list.component.html
+++ b/src/app/main/pages/product-category/list/product-category-list.component.html
@@ -1,4 +1,4 @@
-<app-page title="Product Categories">
+<app-page pageTitle="Product Categories">
 
   <ng-template #optionsContent>
     <button mat-mini-fab aria-label="New product category" (click)="newProductCategory($event)">
