--- a/src/app/main/pages/quote/list/quote-list.component.html
+++ b/src/app/main/pages/quote/list/quote-list.component.html
@@ -1,4 +1,4 @@
-<app-page title="Quotes">
+<app-page pageTitle="Quotes">
   <ng-template #optionsContent>
     <button mat-mini-fab aria-label="New quote" (click)="newQuote($event)">
       <mat-icon>add</mat-icon>
