--- a/src/app/main/pages/quote/new/quote-new.component.html
+++ b/src/app/main/pages/quote/new/quote-new.component.html
@@ -1,4 +1,4 @@
-<app-page title="New Quote">
+<app-page pageTitle="New Quote">
 
   <section fxFlex="100%" fxLayout="row wrap">
     <form [formGroup]="form" (ngSubmit)="onSubmit($event)" fxFlex="100%">
