--- a/src/app/main/pages/quote/update/quote-update.component.html
+++ b/src/app/main/pages/quote/update/quote-update.component.html
@@ -1,4 +1,4 @@
-<app-page title="Edit Quote">
+<app-page pageTitle="Edit Quote">
 
   <section fxFlex="100%" fxLayout="row wrap">
     <form [formGroup]="form" (ngSubmit)="onSubmit($event)" fxFlex="100%">
