--- a/src/app/main/pages/settings/dashboard/dashboard.component.html
+++ b/src/app/main/pages/settings/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-page title="Dashboard" icon="dashboard">
+<app-page pageTitle="Dashboard" pageIcon="dashboard">
   <section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
 
     <mat-card routerLink="../banking" class="cursor-pointer">
