--- a/src/app/main/pages/specialist/new/specialist-new.component.html
+++ b/src/app/main/pages/specialist/new/specialist-new.component.html
@@ -1,4 +1,4 @@
-<app-page title="New Specialist">
+<app-page pageTitle="New Specialist">
 
   <section fxFlex="100%" fxLayout="row wrap">
     <form [formGroup]="form" (ngSubmit)="onSubmit($event)" fxFlex="100%">
