--- a/src/app/main/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/main/pages/admin/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-page title="Dashboard">
+<app-page navigationItem="ADMIN_DASHBOARD">
   <section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
 
     <mat-card>
