--- a/src/app/main/pages/quote/documents/documents.component.html
+++ b/src/app/main/pages/quote/documents/documents.component.html
@@ -1,4 +1,4 @@
-<app-page title="Documents">
+<app-page pageTitle="Documents">
 
   <app-upload (uploadSuccess)="uploadSuccess($event)"></app-upload>
 
