--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -2,7 +2,7 @@
 <!-- <em class="h-max h-full"></em> -->
 <ng-container [ngSwitch]="true">
   <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
-    <app-page title="New payment method">
+    <app-page pageTitle="New payment method">
       <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
     </app-page>
   </ng-template>
