--- a/src/app/main/pages/settings/subscription/subscription.component.html
+++ b/src/app/main/pages/settings/subscription/subscription.component.html
@@ -1,4 +1,4 @@
-<app-page title="Subscription" icon="card_membership">
+<app-page pageTitle="Subscription" pageIcon="card_membership">
 
 
   <section fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
