--- a/src/app/main/pages/specialist/dashboard/dashboard.component.html
+++ b/src/app/main/pages/specialist/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-page title="Dashboard">
+<app-page pageTitle="Dashboard">
 
 
   <section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
