--- a/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
+++ b/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
@@ -1,9 +1,9 @@
 <div fxFlex fxLayout="column" class="max-h-full">
   <mat-toolbar>
     <mat-toolbar-row class="flex justify-between">
-      <section class="flex items-center">
-        <mat-icon class="mr-4">{{icon}}</mat-icon>
-        <span class="text-2xl font-semibold text-white-200">{{title}}</span>
+      <section class="flex items-center text-gray-600">
+        <mat-icon class="mr-4 scale-125">{{pageIcon}}</mat-icon>
+        <span class="text-2xl font-semibold text-white-200">{{pageTitle}}</span>
       </section>
 
 
@@ -13,10 +13,6 @@
 
     </mat-toolbar-row>
   </mat-toolbar>
-
-  <!-- <section class="px-8 mb-8">
-  <span class="text-2xl font-semibold text-blue-500">{{title}}</span>
-</section> -->
 
   <section fxFlex class="pt-4 overflow-y-auto">
     <section fxFlex="auto" class="column mx-4 max-h-full">
