--- a/src/app/shared/selectors/list/list.component.html
+++ b/src/app/shared/selectors/list/list.component.html
@@ -6,7 +6,7 @@
   </section>
 
   <button mat-mini-fab aria-label="New selector" class="ml-3" color="primary" (click)="this.newSelector()">
-    <mat-icon>add</mat-icon>
+    <mat-icon>filter_list</mat-icon>
   </button>
   <!-- <section class="flex rounded-full py-1 px-3 border-2 border-blue-500 hover:bg-blue-700">Pill Shape</section> -->
 </section>
