--- a/src/app/main/pages/dashboard/dashboard.component.html
+++ b/src/app/main/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <section fxLayout="row wrap" fxLayoutGap="20px">
     <mat-card class="dashboard-tile" fxFlex *ngFor="let i of [1,2,3,4]">
       <mat-card-header>
-        <mat-icon mat-card-avatar class="header-icon">fullscreen</mat-icon>
+        <mat-icon mat-card-avatar class="scale-100">fullscreen</mat-icon>
 
         <!-- <div mat-card-avatar class="example-header-image"></div> -->
         <mat-card-title>Medicaid</mat-card-title>
