--- a/src/app/main/pages/admin/subscriptions/edit/subscription-edit.component.html
+++ b/src/app/main/pages/admin/subscriptions/edit/subscription-edit.component.html
@@ -1,33 +1,33 @@
-  <ng-container [ngSwitch]="true">
-    <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
-      <app-page pageTitle="Edit subscription">
-        <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}">
-        </ng-container>
-      </app-page>
-    </ng-template>
+<ng-container [ngSwitch]="true">
+  <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
+    <app-page navigationItem="ADMIN_SUBSCRIPTIONS">
+      <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}">
+      </ng-container>
+    </app-page>
+  </ng-template>
 
-    <ng-template [ngSwitchCase]="this.displayMode == 'Component'">
-      <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}"></ng-container>
-    </ng-template>
+  <ng-template [ngSwitchCase]="this.displayMode == 'Component'">
+    <ng-container [ngTemplateOutlet]="htmlContent" [ngTemplateOutletContext]="{$implicit: this.form}"></ng-container>
+  </ng-template>
 
-    <ng-template [ngSwitchCase]="this.dialogConfig != null">
-      <h2 mat-dialog-title>Edit subscription</h2>
+  <ng-template [ngSwitchCase]="this.dialogConfig != null">
+    <h2 mat-dialog-title>Edit subscription</h2>
 
-      <mat-dialog-content>
-        <ng-container [ngTemplateOutlet]="htmlContent"
-          [ngTemplateOutletContext]="{$implicit: this.dialogConfig.host.form}"></ng-container>
-      </mat-dialog-content>
+    <mat-dialog-content>
+      <ng-container [ngTemplateOutlet]="htmlContent"
+        [ngTemplateOutletContext]="{$implicit: this.dialogConfig.host.form}"></ng-container>
+    </mat-dialog-content>
 
-      <mat-dialog-actions fxLayoutAlign="stretch stretch">
-        <section fxFlex fxLayoutAlign="space-between stretch">
-          <section class="flex">
-            <button mat-button (click)="this.cancel()" cdkFocusInitial>Cancel</button>
-            <button mat-button (click)="this.save()" [disabled]="!this.dialogConfig.host.form.valid">Ok</button>
-          </section>
+    <mat-dialog-actions fxLayoutAlign="stretch stretch">
+      <section fxFlex fxLayoutAlign="space-between stretch">
+        <section class="flex">
+          <button mat-button (click)="this.cancel()" cdkFocusInitial>Cancel</button>
+          <button mat-button (click)="this.save()" [disabled]="!this.dialogConfig.host.form.valid">Ok</button>
         </section>
-      </mat-dialog-actions>
-    </ng-template>
-  </ng-container>
+      </section>
+    </mat-dialog-actions>
+  </ng-template>
+</ng-container>
 
 <ng-template #htmlContent let-targetForm>
   <section [formGroup]="targetForm" fxFlex fxFlexFill>
@@ -52,21 +52,34 @@
 
     <section class="mb-8">
       <mat-form-field appearance="fill" class="w-full">
-        <mat-label>Fill form field</mat-label>
-        <input matInput placeholder="Placeholder">
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-        <mat-hint>Hint</mat-hint>
+        <mat-label>Add detail</mat-label>
+        <input matInput placeholder="Placeholder" (focus)='this.detailInputActivated($event)'
+          [(ngModel)]="this.detailDescription" [ngModelOptions]="{standalone: true}"
+          (keydown.enter)="this.detailInputProcess($event)">
+        <mat-icon matSuffix>check</mat-icon>
+        <mat-hint>Add new subscription detail. Press enter to save</mat-hint>
       </mat-form-field>
+
+
+
+      <!-- <mat-list role="list">
+        <mat-list-item role="listitem" *ngFor="let item of (this.details || this.dialogConfig.host.details)"> {{item.data.description}} </mat-list-item>
+      </mat-list> -->
     </section>
 
-    <section class="mt-8 mb-8">
-      <mat-form-field appearance="fill" class="w-full">
-        <mat-label>Fill form field</mat-label>
-        <input matInput placeholder="Placeholder">
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-        <mat-hint>Hint</mat-hint>
-      </mat-form-field>
-    </section>
+    <section mt-4>
+    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </section>
+
+    <mat-divider></mat-divider>
+
+    <mat-selection-list #detailsList>
+      <mat-list-option *ngFor="let item of (this.details || this.dialogConfig.host.details)">
+        {{item.data.description}}
+      </mat-list-option>
+    </mat-selection-list>
 
   </section>
 </ng-template>
