--- a/src/app/main/pages/admin/subscriptions/subscriptions.component.html
+++ b/src/app/main/pages/admin/subscriptions/subscriptions.component.html
@@ -13,7 +13,9 @@
       <app-selector-list [config]="this.gridFilterConfig"></app-selector-list>
     </section>
 
-    <table mat-table #table [dataSource]="gridConfig?.data" matSort class="mat-elevation-z8" style="width: 100%">
+    length = {{this.data?.length | json}}
+
+    <table mat-table #table [dataSource]="gridConfig?.data" matSort class="w-full">
 
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
@@ -27,7 +29,8 @@
       <ng-container matColumnDef="activateDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date"> Date </th>
         <td mat-cell *matCellDef="let element">
-          {{element.data.activateDate?.toDate && element.data.activateDate?.toDate() | date: 'MMM dd, YYYY hh:mm:ss'}} </td>
+          {{element.data.activateDate?.toDate && element.data.activateDate?.toDate() | date: 'MMM dd, YYYY hh:mm:ss'}}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="price" sortActionDescription="Sort by price">
@@ -52,33 +55,14 @@
         </td>
       </ng-container>
 
-
-      <!-- <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-      </ng-container> -->
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="select-none cursor-pointer hover:bg-gray-300"
         (click)="this.edit(row)"></tr>
     </table>
 
     <mat-paginator class="custom-paginator content-center no-page-label no-previous-page"
-    [length]="gridConfig?.resultsLength"
-    [pageSize]="10"
-    [hidePageSize]="true"
-    [showFirstLastButtons]="false"
-    ></mat-paginator>
+      [length]="gridConfig?.resultsLength" [pageSize]="10" [hidePageSize]="true" [showFirstLastButtons]="false">
+    </mat-paginator>
 
   </section>
 
