fixing still with errors

--- a/src/app/main/pages/admin/subscriptions/subscriptions.component.html
+++ b/src/app/main/pages/admin/subscriptions/subscriptions.component.html
@@ -13,10 +13,10 @@
       <app-selector-list [config]="this.gridFilterConfig"></app-selector-list>
     </section> -->
 
-    length = {{gridConfig?.data?.length}}<br>
-    {{gridConfig?.data | json}}
+    <!-- length = {{gridConfig?.data?.length}}<br> -->
+    <!-- {{gridConfig?.data | json}} -->
 
-    <table mat-table #table [dataSource]="this.gridConfig?.data" matSort class="w-full">
+    <table mat-table #table [dataSource]="this.dataSource" matSort class="w-full">
 
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
