--- a/src/app/main/pages/settings/subscription/subscription.component.html
+++ b/src/app/main/pages/settings/subscription/subscription.component.html
@@ -1,5 +1,4 @@
-<app-page pageTitle="Subscription" pageIcon="card_membership">
-
+<app-page navigationItem="SETTINGS_SUBSCRIPTION">
 
   <section class="flex justify-center space-x-4">
     <ng-container *ngIf="this.items">
