fix app-page way to show title

--- a/src/app/main/pages/admin/subscriptions/subscriptions.component.html
+++ b/src/app/main/pages/admin/subscriptions/subscriptions.component.html
@@ -1,6 +1,6 @@
 <app-page navigationItem="ADMIN_SUBSCRIPTIONS">
 
-  <section class="flex flex-col">
+  <section class="flex w-full flex-col">
 
     <section class="mb-5">
       <mat-form-field class="example-full-width">
