--- a/src/app/main/pages/settings/dashboard/dashboard.component.html
+++ b/src/app/main/pages/settings/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 
     <mat-card routerLink="../banking" class="cursor-pointer">
       <mat-card-header>
-        <mat-icon mat-card-avatar class="header-icon">account_balance</mat-icon>
+        <mat-icon mat-card-avatar class="">account_balance</mat-icon>
         <mat-card-title>Banking</mat-card-title>
         <mat-card-subtitle>Money transfer settings</mat-card-subtitle>
       </mat-card-header>
@@ -11,7 +11,7 @@
 
     <mat-card routerLink="../subscription" class="cursor-pointer">
       <mat-card-header>
-        <mat-icon mat-card-avatar class="header-icon">card_membership</mat-icon>
+        <mat-icon mat-card-avatar class="">card_membership</mat-icon>
         <mat-card-title>Subscription</mat-card-title>
         <mat-card-subtitle>Your subscription</mat-card-subtitle>
       </mat-card-header>
