--- a/src/app/main/pages/settings/subscription/subscription.component.html
+++ b/src/app/main/pages/settings/subscription/subscription.component.html
@@ -1,8 +1,8 @@
 <app-page navigationItem="SETTINGS_SUBSCRIPTION">
-  <section class="flex justify-center space-x-4">
-    <ng-container *ngIf="this.items">
+  <section class="flex h-full justify-center space-x-4">
+    <ng-container *ngIf="this.items; else loading">
       <mat-card *ngFor="let item of this.items"
-        class="dashboard-tile rounded-xl flex flex-col flex-grow-0 lt-md:w-4/12 w-2/12 mat-elevation-z2">
+        class="rounded-xl flex flex-col flex-grow-0 h-[70vh] lt-md:w-4/12 w-2/12 mat-elevation-z2">
         <mat-card-header class="justify-center">
           <mat-card-title>{{item.data.name}}</mat-card-title>
           <mat-card-subtitle clas="flex flex-grow-0">
@@ -35,3 +35,47 @@
     </ng-container>
   </section>
 </app-page>
+
+
+<ng-template #loading>
+  <section class="flex w-full h-full justify-center space-x-4">
+    <ng-container *ngFor="let item of [1,2,3]">
+      <div class="flex flex-col flex-grow-0 border border-gray-300 shadow rounded-md p-4 max-w-sm lt-md:w-4/12 w-2/12 h-[70vh]">
+        <div class="animate-pulse flex space-x-4 justify-center h-full">
+          <div class="w-[80%] space-y-6 py-1 flex flex-col align-center items-center">
+            <div class="h-2 bg-slate-300 rounded w-[50%]"></div>
+            <div class=" rounded-full bg-slate-300 h-32 w-32"></div>
+            <div class="w-full space-y-3">
+              <div class="w-full grid grid-cols-3 gap-4">
+                <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+                <div class="h-2 bg-slate-300 rounded col-span-1"></div>
+                <div class="h-2 bg-slate-300 rounded col-span-1"></div>
+                <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+              </div>
+              <div class="h-2 bg-slate-300 rounded"></div>
+            </div>
+
+            <div class="w-full divide divide-y divide-solid divide-gray-300 mt-8">
+              <div class="py-2">
+                <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+              </div>
+              <div class="py-2">
+                <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+              </div>
+              <div class="py-2">
+                <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+              </div>
+              <div class="py-2">
+                <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex w-full justify-center self-end">
+          <div class="animate-pulse w-28 h-10 rounded-md bg-slate-500 border border-slate-800"></div>
+        </div>
+      </div>
+    </ng-container>
+  </section>
+</ng-template>
