login-email type

--- a/src/app/main/pages/auth/login/login.component.html
+++ b/src/app/main/pages/auth/login/login.component.html
@@ -27,7 +27,7 @@
           <mat-form-field>
             <mat-label>Email</mat-label>
             <mat-icon matPrefix>email</mat-icon>
-            <input [(ngModel)]="userLogin.userName" name="userName" #userName="ngModel" matInput type="text" required
+            <input [(ngModel)]="userLogin.userName" name="userName" #userName="ngModel" matInput type="email" required
               email>
             <mat-hint>User email. If you don't have one, please contact your IT support</mat-hint>
             <mat-error *ngIf="userName.dirty && userName.hasError('required')">
