stripe webhooks and subscriptions

--- a/src/app/main/pages/settings/dashboard/dashboard.component.html
+++ b/src/app/main/pages/settings/dashboard/dashboard.component.html
@@ -5,11 +5,11 @@
       <mat-card-header>
         <mat-icon mat-card-avatar class="">account_balance</mat-icon>
         <mat-card-title>Banking</mat-card-title>
-        <mat-card-subtitle>Money transfer settings</mat-card-subtitle>
+        <mat-card-subtitle>Payment settings</mat-card-subtitle>
       </mat-card-header>
     </mat-card>
 
-    <mat-card routerLink="../subscription" class="cursor-pointer">
+    <mat-card routerLink="../subscript+ion" class="cursor-pointer">
       <mat-card-header>
         <mat-icon mat-card-avatar class="">card_membership</mat-icon>
         <mat-card-title>Subscription</mat-card-title>
