fix subscription navigation

--- a/src/app/main/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/main/pages/admin/dashboard/dashboard.component.html
@@ -5,6 +5,8 @@
       <mat-card-header>
         <mat-icon mat-card-avatar class="scale-100">{{this.susbscriptionNavigationItem.icon}}</mat-icon>
         <mat-card-title>{{this.susbscriptionNavigationItem.label}}</mat-card-title>
+        <mat-card-subtitle>{{this.susbscriptionNavigationItem.caption}}</mat-card-subtitle>
+
       </mat-card-header>
       <mat-card-footer></mat-card-footer>
     </mat-card>
