--- a/src/app/main/pages/settings/dashboard/dashboard.component.html
+++ b/src/app/main/pages/settings/dashboard/dashboard.component.html
@@ -9,12 +9,14 @@
       </mat-card-header>
     </mat-card>
 
-    <mat-card routerLink="../subscript+ion" class="cursor-pointer">
+    <mat-card [routerLink]="this.susbscriptionNavigationItem.routerLink">
       <mat-card-header>
-        <mat-icon mat-card-avatar class="">card_membership</mat-icon>
-        <mat-card-title>Subscription</mat-card-title>
-        <mat-card-subtitle>Your subscription</mat-card-subtitle>
+        <mat-icon mat-card-avatar class="scale-100">{{this.susbscriptionNavigationItem.icon}}</mat-icon>
+        <mat-card-title>{{this.susbscriptionNavigationItem.label}}</mat-card-title>
+        <mat-card-subtitle>{{this.susbscriptionNavigationItem.caption}}</mat-card-subtitle>
+
       </mat-card-header>
+      <mat-card-footer></mat-card-footer>
     </mat-card>
 
   </section>
