--- a/src/app/main/pages/settings/dashboard/dashboard.component.html
+++ b/src/app/main/pages/settings/dashboard/dashboard.component.html
@@ -1,19 +1,11 @@
 <app-page pageTitle="Dashboard" pageIcon="dashboard">
   <section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
 
-    <mat-card routerLink="../banking" class="cursor-pointer">
+    <mat-card *ngFor="let item of this.navigationItems" class="m-2 p-2 cursor-pointer" [routerLink]="item.routerLink">
       <mat-card-header>
-        <mat-icon mat-card-avatar class="">account_balance</mat-icon>
-        <mat-card-title>Banking</mat-card-title>
-        <mat-card-subtitle>Payment settings</mat-card-subtitle>
-      </mat-card-header>
-    </mat-card>
-
-    <mat-card [routerLink]="this.susbscriptionNavigationItem.routerLink">
-      <mat-card-header>
-        <mat-icon mat-card-avatar class="scale-100">{{this.susbscriptionNavigationItem.icon}}</mat-icon>
-        <mat-card-title>{{this.susbscriptionNavigationItem.label}}</mat-card-title>
-        <mat-card-subtitle>{{this.susbscriptionNavigationItem.caption}}</mat-card-subtitle>
+        <mat-icon mat-card-avatar class="scale-100">{{item.icon}}</mat-icon>
+        <mat-card-title>{{item.label}}</mat-card-title>
+        <mat-card-subtitle>{{item.caption}}</mat-card-subtitle>
 
       </mat-card-header>
       <mat-card-footer></mat-card-footer>
