--- a/src/app/shared/layout/layout-main/layout-main.component.html
+++ b/src/app/shared/layout/layout-main/layout-main.component.html
@@ -4,7 +4,7 @@
   </ng-template>
 </app-toolbar>
 
-<mat-drawer-container class="sidenav-container" autosize>
+<mat-drawer-container class="sidenav-container" autosize="true">
   <mat-drawer #drawer class="example-sidenav" [mode]="this.side">
     <app-menu fxFlexFill></app-menu>
   </mat-drawer>
