--- a/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
+++ b/src/app/shared/layout/layout-main/layout-main-common/page/page.component.html
@@ -1,11 +1,10 @@
-<div  class="flex flex-col w-full max-h-full">
+<div  class="flex flex-col w-full max-h-full pb-4">
   <mat-toolbar>
     <mat-toolbar-row class="flex justify-between">
       <section class="flex items-center text-gray-600">
         <mat-icon class="mr-4 scale-125">{{this.pageIcon}}</mat-icon>
         <span class="text-2xl font-semibold text-white-200">{{this.pageTitle}}</span>
       </section>
-
 
       <section class="flex gap-2" *ngIf="this.optionsContent">
         <ng-container [ngTemplateOutlet]="this.optionsContent"></ng-container>
