--- a/src/app/main/pages/specialist/documents/documents.component.html
+++ b/src/app/main/pages/specialist/documents/documents.component.html
@@ -1,5 +1,5 @@
 <app-page pageTitle="Documents">
 
-  <app-upload (uploadSuccess)="uploadSuccess($event)"></app-upload>
+  <!-- <app-upload (uploadSuccess)="uploadSuccess($event)"></app-upload> -->
 
 </app-page>
