--- a/src/app/main/pages/user-files/user-files.component.html
+++ b/src/app/main/pages/user-files/user-files.component.html
@@ -8,13 +8,13 @@
   <section *ngFor="let file of this.files" class="relative flex flex-col w-2/12 p-2 hover:scale-105">
     <mat-card class="p-0 h-full overflow-hidden">
       <mat-card-header class="absolute w-full justify-end top-0">
-        <button mat-icon-button class="hover:scale-105">
+        <button mat-icon-button class="hover:scale-105" (click)="this.delete(file)">
           <mat-icon class="text-white text-shadow-md">delete</mat-icon>
         </button>
       </mat-card-header>
       <mat-card-content>
         <!-- {{file | json}} -->
-        <img [src]="file">
+        <img [src]="file.url">
       </mat-card-content>
     </mat-card>
   </section>
