--- a/src/app/shared/components/app-upload/app-upload.component.html
+++ b/src/app/shared/components/app-upload/app-upload.component.html
@@ -1,4 +1,4 @@
 
 <ngx-awesome-uploader class="flex w-full h-full justify-items-stretch items-stretch" *ngIf="this.adapter"
-[adapter]="adapter" (uploadSuccess)="this.uploadSuccess($event)">
+[adapter]="adapter" [showPreviewContainer]="false" (uploadSuccess)="this.uploadSuccess($event)">
 </ngx-awesome-uploader>
