--- a/src/app/main/pages/settings/subscription/success/subscription-success.component.html
+++ b/src/app/main/pages/settings/subscription/success/subscription-success.component.html
@@ -1,19 +1,24 @@
 <app-page navigationItem="SETTINGS_SUBSCRIPTION">
-  <section class="flex flex-wrap h-full justify-center">
-      <mat-card class="flex w-full mat-elevation-z2">
-        <mat-card-header class="justify-center">
-          <mat-card-title>Fail subscription</mat-card-title>
-          <mat-card-subtitle clas="flex flex-grow-0">
-            <span class="text-sm mr-2">Subscription success</span>
-          </mat-card-subtitle>
-        </mat-card-header>
+  <section class="flex flex-wrap h-full justify-center items-center">
+    <mat-card class="mat-elevation-z2 w-10/12 gt-sm:w-4/12  gt-md:w-3/12">
+      <mat-card-header class="justify-center">
+        <mat-card-title class="text-center">Success subscription</mat-card-title>
+        <mat-card-title class="text-center">{{this.userSubscription.data.name}}</mat-card-title>
+        <mat-card-subtitle class="flex items-center justify-center">
+            <span class="text-sm mr-2">$</span>
+            <span class="text-lg font-bold">{{this.userSubscription.data.price | number:'1.2'}}</span>
+        </mat-card-subtitle>
 
-        <mat-card-content class="flex flex-col flex-grow">
-        </mat-card-content>
-        <mat-card-actions class="flex justify-center">
-          <a mat-raised-button color="primary" routerLink="/" >Go Home</a>
-        </mat-card-actions>
-      </mat-card>
+
+      </mat-card-header>
+
+      <mat-card-content class="text-center">
+        <p>{{this.userSubscription.data.description}}</p>
+        <!-- {{this.userSubscription | json}} -->
+      </mat-card-content>
+      <mat-card-actions class="flex justify-center">
+        <a mat-raised-button color="primary" routerLink="/">Go Home</a>
+      </mat-card-actions>
+    </mat-card>
   </section>
 </app-page>
-
