--- a/src/app/shared/layout/layout-main/toolbar/toolbar.component.html
+++ b/src/app/shared/layout/layout-main/toolbar/toolbar.component.html
@@ -8,7 +8,7 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <app-breadcrumb class="flex flex-row flex-no-wrap  ml-10"></app-breadcrumb>
+  <app-breadcrumb class="lt-md:hidden flex flex-row flex-no-wrap  ml-10"></app-breadcrumb>
 
   <span class="example-spacer"></span>
   <!-- <mat-form-field class="example-form-field">
